k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-cloud-app
  namespace: campus-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campus-cloud-app
  template:
    metadata:
      labels:
        app: campus-cloud-app
    spec:
      containers:
        - name: app
          image: campus-cloud-reference:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "192Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
